--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.7.0",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "feather-icons": "^4.28.0",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^2.2.1",
+    "react-dom": "17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
+    "unsplash-js": "^7.0.15"
   },
   "devDependencies": {
     "eslint": "8.11.0",
